test/testdata/conformance/tcp-proxy/cluster.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: cluster0
spec:
  name: cluster0
  connect_timeout: 30s
  type: LOGICAL_DNS
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: cluster0
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: tcp-echo
                  port_value: 9001
