test/testdata/conformance/tcp-proxy/listener.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Listener
metadata:
  name: tcp-proxy-listener
spec:
  name: tcp-proxy-listener
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 7777
  filter_chains:
    - filters:
        - name: envoy.filters.network.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: destination
            cluster: cluster0
