test/testdata/conformance/tcp-proxy/vs-access-log-config.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-access-log-config
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  accessLogConfig:
    name: envoy-access-log
