test/testdata/conformance/tcp-proxy/vs-access-log.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-access-log
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  accessLog:
    name: envoy.access_loggers
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      log_format:
        json_format:
          message: "%LOCAL_REPLY_BODY%"
          status: "%RESPONSE_CODE%"
          duration: "%DURATION%"
          remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
          x_real_ip: "%REQ(X-Real-IP)%"
          request_start_time: "%START_TIME%"
          bytes_sent: "%BYTES_SENT%"
          http_referer: "%REQ(Referer)%"
          http_user_agent: "%REQ(User-Agent)%"
