test/testdata/conformance/tcp-proxy/vs-additional-routes.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-additional-routes
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  additionalRoutes:
    - name: test-route
