test/testdata/conformance/tcp-proxy/vs-tls-config.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-tls-config
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  tlsConfig:
    autoDiscovery: true
