test/testdata/conformance/tcp-proxy/vs-upgrade-configs.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-upgrade-configs
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  upgradeConfigs:
    - name: test-route
