test/testdata/conformance/tcp-proxy/vs-use-remote-address.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-use-remote-address
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  useRemoteAddress: false
