test/testdata/conformance/tcp-proxy/vs-virtual-host.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs-virtual-host
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-listener
  virtualHost:
    name: test-virtual-host
    domains:
      - exc.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello\"}"
